# warp-hexagon

./: .travis.yml  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
common/src/: lib.rs
data/: customers.json
src/: lib.rs  main.rs
src/core/: error.rs  mod.rs  response.rs  result.rs
src/customer/: db.rs  domain.rs  handler.rs  mod.rs  repository.rs  route.rs
src/customer/data/: db.rs
src/customer/domain/: create_customer.rs  delete_customer.rs  get_customer.rs  get_customer_list.rs  mod.rs  update_customer.rs
src/customer/repository/: in_local_repository.rs  mod.rs  repository.rs
src/database/: mod.rs  postgres.rs
src/health/: handler.rs  route.rs
src/locator/: mod.rs  service_locator.rs
src/todo/: mod.rs
src/todo/data/: data_source.rs
