[package]
name = "warp-hexagon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "macros"] }
