[package]
name = "warp-hexagon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }
serde_derive = "1.0.138"
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.56"
mobc = "0.7.3"
mobc-postgres = { version = "0.7.0", features = ["with-chrono-0_4"] }
thiserror = "1.0.31"
chrono = { version = "0.4.19", features = ["serde"] }

# local crate
common = { version = "0.1.0", path = "./common" }